[tool.poetry]
name = "hygge"
version = "0.1.0"
description = "A cozzy('hygge') way to get json response back asynchronously"
authors = ["Prayson Wilfred Daniel <praysonwilfred@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
